--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
   <title>Bir Şirket Sitesi!</title>
   <link href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
+  <script src="index.js" defer></script>
 </head>
 
 <body>
@@ -19,7 +20,7 @@
         <a href="#"></a>
         <a href="#"></a>
         <a href="#"></a>
-        <a href="#"></a>
+        <a href="#"></a>  
       </nav>
       <img id="logo-img" class="logo" alt="Bir Şirket Sitesi logo">
     </header>
